--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: silver_agent
-description: "A new Flutter project."
+description: "SilverAgent - Singapore Super App powered by AI"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -37,10 +37,6 @@ dependencies:
 
   # State management
   provider: ^6.1.1
-
-  # Speech recognition
-  speech_to_text: ^7.0.0
-  permission_handler: ^12.0.1
 
   # Utilities
   intl: ^0.20.2
